fix: Table of contents overflow into button

--- a/assets/sass/components/_tree-view.scss
+++ b/assets/sass/components/_tree-view.scss
@@ -7,7 +7,7 @@ aside > div.tree-view {
 		top: 4rem;
 	}
 
-	max-height: 65vh;
+	max-height: 55vh;
 
 	padding: 0.8rem 0.4rem;
 	background: $background-color-darker;
